--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,3 +9,6 @@ password=testuser
 #PATH WEBDRIVERS
 chromedriver=webdrivers/chromedriver
 geckodriver=webdrivers/geckodriver
+
+#USER DRIVER EXCEL
+drivers.excel=UserDriver.xlsx
